salesforce/metadata/objects/Account.object
<CustomObject>
    <fields>
        <fullName>POST_MESSAGE__c</fullName>
        <label>POST Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>POST_STATUS__c</fullName>
        <label>POST Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAGE_Address_ID__c</fullName>
        <label>SAGE Address ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAGE_Customer_No__c</fullName>
        <label>SAGE Customer No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>